overflow on mobile fixed

--- a/css/styles-purplean.css
+++ b/css/styles-purplean.css
@@ -282,7 +282,6 @@ ul li {
 .wrapper {
   text-align: center;
   max-width: 1024px;
-  /* min-width: 450px; */
 }
 
 .wrapper h3 {
@@ -410,12 +409,12 @@ ul li {
 /* SLIDER */
 .slider {
   max-width: 560px;
-  min-height: 260px;
-  height: auto;
+  min-height: 290px;
   margin: 0 auto;
   position: relative;
   bottom: 25px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 
 .slide {
@@ -473,7 +472,7 @@ ul li {
 
 .dots {
   position: relative;
-  bottom: 90px;
+  bottom: 120px;
   display: flex;
   height: 20px;
   width: 92px;
@@ -529,7 +528,7 @@ ul li {
   }
   .slider {
     max-width: 100%;
-    min-width: 370px;
+    min-width: 100%;
   }
   .slide {
     max-width: 100%;
